--- a/style.css
+++ b/style.css
@@ -1,54 +1,27 @@
-/**********************************/
-/*********** Grid Layout CSS **********/
-/**********************************/
+@charset "utf-8";
 
-.item1 { grid-area: header; }
-.item2 { grid-area: menu; }
-.item3 { grid-area: main; }
-.item4 { grid-area: right; }
-.item5 { grid-area: footer; }
+/*
+   New Perspectives on HTML5 and CSS3, 7th Edition
+   Tutorial 5
+   Case Problem 2
+   
+   Author: KJ Klamer  
+   Date: 04/22/2021      
+   
+   Filename: wc_styles.css
 
-.grid-container {
-  display: grid;
-  grid-template-areas:
-    'header header header header header header'
-    'menu main main main right right'
-    'footer footer footer footer footer footer';
-  grid-gap: 10px;
-  background-color: #A274FF;
-  padding: 10px;
-}
+   This file contains the layout styles and media
+   queries used with sample pages from the Willet
+   Creek Golf Course website.
 
-.grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
-}
-.grid-container .item1 {
-    background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
-    padding: 0px 0;
-    font-size: 30px;
-  
-}
-.grid-container .item3 {
-    background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
-    padding-left: 10px;
-    font-size: 30px;
-  
-}
-.grid-container .item5 {
-  background-color: #A274FF;
-  text-align: center;
-  padding: 50px 10px 10px 10px;
-  font-size: 30px;
-}
+*/
+
+
+/* Import Design Styles */
+@import url("design.css");
 /**********************************/
 /*********** Nav Bar CSS **********/
 /**********************************/
-
 ul {
     list-style-type: none;
     margin: 0;
@@ -72,3 +45,14 @@ ul {
   li a:hover {
     background-color: #111;
   }
+/**********************************/
+/*********** Image Layout CSS **********/
+/**********************************/
+.main__img{
+  height:45%;
+  min-height: 320px;
+  margin-bottom: 64px;
+  border-radius: 12px;
+  box-shadow: 3px 3px 10px -4px rgb(rgba(255, 0, 234, 0.644), green, blue);
+  object-fit:cover;
+}
