changed up nav to stick when scrolling and section

--- a/design.css
+++ b/design.css
@@ -19,6 +19,9 @@
 /**********************************/
 /*********** Main Layout CSS **********/
 /**********************************/
+html {
+    scroll-behavior: smooth;
+  }
 .container {
     width: 90%;
     max-width:1200px;
