--- a/style.css
+++ b/style.css
@@ -45,6 +45,34 @@ ul {
   li a:hover {
     background-color: #111;
   }
+  div.sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+  }
+  /* unvisited link */
+  a:link {
+    color: whitesmoke;
+    text-decoration: none;
+  }
+
+  /* visited link */
+  a:visited {
+    color: whitesmoke;
+    text-decoration: none;
+  }
+
+  /* mouse over link */
+  a:hover {
+    color: hotpink;
+    text-decoration: none;
+  }
+
+  /* selected link */
+  a:active {
+    color: yellow;
+    text-decoration: none;
+  }
 /**********************************/
 /*********** Image Layout CSS **********/
 /**********************************/
@@ -63,4 +91,7 @@ ul {
 /**********************************/
 .mainposition{
   position: relative;
+}
+.mainpadding{
+  padding-bottom: 8%;
 }
