--- a/design.css
+++ b/design.css
@@ -45,10 +45,6 @@ html {
     align-items: center;
     text-align: center;
 }
-img{
-    vertical-align: middle;
-    display: inline-block;
-}
 .mainheader {
     position: relative;
     z-index: 1;
@@ -66,6 +62,123 @@ img{
     -ms-flex-align: center;
     align-items: center;
 }
+/**********************************/
+/*********** Sections Layout CSS **********/
+/**********************************/
+.container .container--center{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    text-align: center;
+}
+
+.sectionheader {
+    max-width: 600px;
+    margin-bottom: 100px;
+}
+.section_heading{
+    padding-top: 100px;
+    margin-top: 0;
+    font-size: 56px;
+    line-height: 1.2;
+    font-weight: 600;
+    letter-spacing: -1.2px;
+    text-align: center;
+}
+img{
+    vertical-align: middle;
+    display: inline-block;
+}
 section{
     display:block;
+}
+/**********************************/
+/*********** Projects Layout CSS **********/
+/**********************************/
+*{
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.projects-list-wrapper{
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+}
+.projects-list-grid {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 0;
+    grid-row-gap: 0;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+}
+.projects-list__item {
+    width: 50%;
+    height: 100%;
+    margin-bottom: 64px;
+    padding-right: 32px;
+    padding-left: 32px;
+    cursor: pointer;
+}
+.projects-list-item-wrap {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    -webkit-transition: all .3s cubic-bezier(.645,.045,.355,1);
+    transition: all .3s cubic-bezier(.645,.045,.355,1);
+    color: #1d1d1f;
+    text-decoration: none;
+}
+.w-inline-block {
+    max-width: 100%;
+    display: inline-block;
+}
+a {
+    color: #1984ea;
+    text-decoration: underline;
+}
+.card.projects-list__img {
+    position: relative;
+    z-index: 2;
+    margin-bottom: 0;
+    border-radius: 8px;
+}
+.card {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ebebeb;
+    border-radius: 12px;
+    background-color: #fff;
+    box-shadow: inset 1px 1px 1px -0.5px hsl(0deg 0% 100% / 70%), 3px 3px 7px -3px rgb(0 0 0 / 10%);
+}
+.projects-list__img {
+    width: 100%;
+    margin-bottom: 16px;
+    border-radius: 8px;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -o-object-position: 50% 0;
+    object-position: 50% 0;
 }
