--- a/style.css
+++ b/style.css
@@ -86,6 +86,17 @@ ul {
   box-shadow: 0px 4px 25px -1px rgb(117, 26, 117);
   object-fit:cover;
 }
+.resume__img{
+  height:45%;
+  min-height: 720px;
+  min-width: 520px;
+  margin: 20px;
+  margin-left: 30%;
+  margin-bottom: 106px;
+  border-radius: 20px;
+  box-shadow: 0px 4px 25px -1px rgb(117, 26, 117);
+  object-fit:cover;
+}
 /**********************************/
 /*********** Position Class **********/
 /**********************************/
